feat: Fix code quality issues